@@ -6,6 +6,7 @@ detailled list of changes, please see ChangeLog.
 Bug fixes:
  - hookutils.py, attach_hardware(): Do not attach empty Pccardctl*.
  - apport/report.py, add_gdb_info(): Do not throw away stderr from gdb.
+ - data/general-hooks/parse_segv.py: Handle arithmetic wrapping correctly.
 
 1.9 (2009-09-08)
 ----------------
